--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,10 @@
     "iron-pages": "PolymerElements/iron-pages#^1.0.0",
     "iron-selector": "PolymerElements/iron-selector#^1.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
-    "polymer": "Polymer/polymer#^1.6.0"
+    "polymer": "Polymer/polymer#^1.6.0",
+    "iron-icons": "polymerelements/iron-icons#^1.2.0",
+    "paper-menu": "polymerelements/paper-menu#^1.2.2",
+    "paper-item": "polymerelements/paper-item#^1.2.1"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
