--- a/package.json
+++ b/package.json
@@ -5,19 +5,23 @@
   "license": "BSD-3-Clause",
   "scripts": {
     "lint": "eslint . --ext js,html --ignore-path .gitignore",
-    "test": "npm run lint && polymer test",
     "build": "gulp build"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.22.0",
     "del": "^2.2.0",
     "eslint": "^3.12.0",
     "eslint-config-google": "^0.7.0",
+    "eslint-config-standard": "^7.0.0",
     "eslint-plugin-html": "^1.7.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^2.1.1",
     "gulp": "gulpjs/gulp#4.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-html-minifier": "^0.1.8",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^3.1.0",
+    "gulp-uglify": "^2.0.1",
     "merge-stream": "^1.0.0",
     "polymer-build": "^0.6.0"
   },
