--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
+    "css-slam": "^1.2.1",
     "del": "^2.2.0",
     "eslint": "^3.12.0",
     "eslint-config-google": "^0.7.0",
@@ -23,7 +24,7 @@
     "gulp-imagemin": "^3.1.0",
     "gulp-uglify": "^2.0.1",
     "merge-stream": "^1.0.0",
-    "polymer-build": "^0.6.0"
+    "polymer-build": "^0.8.4"
   },
   "engines": {
     "node": ">=4.0"
