--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
   ],
   "license": "https://polymer.github.io/LICENSE.txt",
   "dependencies": {
+    "polymer": "Polymer/polymer#^1.6.0",
     "app-layout": "PolymerElements/app-layout#^0.10.0",
     "app-route": "PolymerElements/app-route#^0.9.0",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.0",
@@ -14,11 +15,14 @@
     "iron-media-query": "PolymerElements/iron-media-query#^1.0.0",
     "iron-pages": "PolymerElements/iron-pages#^1.0.0",
     "iron-selector": "PolymerElements/iron-selector#^1.0.0",
-    "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
-    "polymer": "Polymer/polymer#^1.6.0",
     "iron-icons": "polymerelements/iron-icons#^1.2.0",
+    "iron-ajax": "polymerelements/iron-ajax#^1.4.3",
+    "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
     "paper-menu": "polymerelements/paper-menu#^1.2.2",
-    "paper-item": "polymerelements/paper-item#^1.2.1"
+    "paper-item": "polymerelements/paper-item#^1.2.1",
+    "paper-button": "polymerelements/paper-button#^1.0.14",
+    "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
+    "paper-material": "PolymerElements/paper-material#^1.0.6"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
