--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,9 @@
     "paper-item": "polymerelements/paper-item#^1.2.1",
     "paper-button": "polymerelements/paper-button#^1.0.14",
     "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
-    "paper-material": "PolymerElements/paper-material#^1.0.6"
+    "paper-material": "PolymerElements/paper-material#^1.0.6",
+    "paper-tabs": "PolymerElements/paper-tabs#^1.8.0",
+    "paper-input": "PolymerElements/paper-input#^1.1.23"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
