--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "license": "BSD-3-Clause",
   "scripts": {
     "lint": "eslint . --ext js,html --ignore-path .gitignore",
-    "build": "gulp build"
+    "build": "gulp build",
+    "package-template": "aws cloudformation package --template-file cloudformation/stack-template.json --output-template-file cloudformation/stack-template-packaged.yaml --s3-bucket gitcheese-artifacts",
+    "deploy-dev": "aws cloudformation deploy --template-file cloudformation/stack-template-packaged.yaml --profile gitcheese --stack-name githceese-ui-dev --region us-east-1 --capabilities CAPABILITY_IAM --parameter-overrides ProjectName=gitcheese ServiceName=ui BranchName=dev",
+    "deploy-master": "aws cloudformation deploy --template-file cloudformation/stack-template-packaged.yaml --profile gitcheese --stack-name githceese-ui-master --region us-east-1 --capabilities CAPABILITY_IAM --parameter-overrides ProjectName=gitcheese ServiceName=ui BranchName=dev"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
