--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
+    "bower": "^1.8.0",
     "css-slam": "^1.2.1",
     "del": "^2.2.0",
     "eslint": "^3.12.0",
