--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,9 @@
     "iron-signals": "polymerelements/iron-signals#^1.0.3",
     "iron-image": "polymerelements/iron-image#^1.2.5",
     "iron-form": "polymerelements/iron-form#^1.1.4",
-    "gold-email-input": "polymerelements/gold-email-input#^1.0.9"
+    "gold-email-input": "polymerelements/gold-email-input#^1.0.9",
+    "paper-dialog": "polymerelements/paper-dialog#^1.1.0",
+    "paper-dropdown-menu": "polymerelements/paper-dropdown-menu#^1.5.0"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
