Added account configuration and loading indicator

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,12 @@
   "rules": {
     "no-var": "off",
     "new-cap": ["error", { "capIsNewExceptions": ["Polymer"] }],
-    "semi": [2, "always"]
+    "semi": [2, "always"],
+    "space-before-function-paren": ["error", {
+      "anonymous": "ignore",
+      "named": "ignore",
+      "asyncArrow": "ignore"
+    }]
   },
   "globals": {
     "Polymer": true
