--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "iron-form": "polymerelements/iron-form#^1.1.4",
     "gold-email-input": "polymerelements/gold-email-input#^1.0.9",
     "paper-dialog": "polymerelements/paper-dialog#^1.1.0",
-    "paper-dropdown-menu": "polymerelements/paper-dropdown-menu#^1.5.0"
+    "paper-dropdown-menu": "polymerelements/paper-dropdown-menu#^1.5.0",
+    "paper-progress": "polymerelements/paper-progress#^1.0.11"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
