--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-standard": "^2.1.1",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-babel": "^6.1.2",
+    "gulp-html-autoprefixer": "0.0.1",
     "gulp-html-minifier": "^0.1.8",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^3.1.0",
