--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "lint": "eslint . --ext js,html --ignore-path .gitignore",
     "build": "gulp build",
-    "package-template": "aws cloudformation package --template-file cloudformation/stack-template.json --output-template-file cloudformation/stack-template-packaged.yaml --s3-bucket gitcheese-artifacts",
+    "package-template": "aws cloudformation package --template-file cloudformation/stack-template.json --output-template-file cloudformation/stack-template-packaged.yaml --s3-bucket gitcheese-artifacts --profile gitcheese",
     "deploy-dev": "aws cloudformation deploy --template-file cloudformation/stack-template-packaged.yaml --profile gitcheese --stack-name githceese-ui-dev --region us-east-1 --capabilities CAPABILITY_IAM --parameter-overrides ProjectName=gitcheese ServiceName=ui BranchName=dev",
-    "deploy-master": "aws cloudformation deploy --template-file cloudformation/stack-template-packaged.yaml --profile gitcheese --stack-name githceese-ui-master --region us-east-1 --capabilities CAPABILITY_IAM --parameter-overrides ProjectName=gitcheese ServiceName=ui BranchName=dev"
+    "deploy-master": "aws cloudformation deploy --template-file cloudformation/stack-template-packaged.yaml --profile gitcheese --stack-name githceese-ui-master --region us-east-1 --capabilities CAPABILITY_IAM --parameter-overrides ProjectName=gitcheese ServiceName=ui BranchName=master"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
