Fixed donate safari error

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
   },
   "globals": {
     "Polymer": true,
-    "GitcheeseBehaviors": true
+    "GitcheeseBehaviors": true,
+    "StripeCheckout": true
   }
 }
