--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "My App",
-  "short_name": "My App",
-  "start_url": "/?homescreen=1",
+  "name": "Gitcheese",
+  "short_name": "Gitcheese",
+  "start_url": "",
   "display": "standalone",
   "theme_color": "#3f51b5",
   "background_color": "#3f51b5",
