--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "gulp-html-minifier": "^0.1.8",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^3.1.0",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-uglify": "^2.0.1",
     "merge-stream": "^1.0.0",
     "polymer-build": "^0.8.4"
