--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   ],
   "license": "https://polymer.github.io/LICENSE.txt",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.6.0",
+    "polymer": "Polymer/polymer#^1.9.1",
     "app-layout": "PolymerElements/app-layout#^0.10.0",
     "app-route": "PolymerElements/app-route#^0.9.0",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.0",
@@ -35,7 +35,8 @@
     "paper-fab": "polymerelements/paper-fab#^1.2.1",
     "paper-card": "polymerelements/paper-card#^1.1.4",
     "flag-icon-css": "^2.8.0",
-    "paper-toast": "polymerelements/paper-toast#^1.3.0"
+    "paper-toast": "polymerelements/paper-toast#^1.3.0",
+    "app-active-route": "^1.0.2"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
