--- a/bower.json
+++ b/bower.json
@@ -5,41 +5,37 @@
   ],
   "license": "https://polymer.github.io/LICENSE.txt",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.9.1",
-    "app-layout": "PolymerElements/app-layout#^0.10.0",
-    "app-route": "PolymerElements/app-route#^0.9.0",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.0",
-    "iron-icon": "PolymerElements/iron-icon#^1.0.0",
-    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^1.0.0",
-    "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.0",
-    "iron-media-query": "polymerelements/iron-media-query#^1.0.8",
-    "iron-pages": "PolymerElements/iron-pages#^1.0.0",
-    "iron-selector": "PolymerElements/iron-selector#^1.0.0",
-    "iron-icons": "polymerelements/iron-icons#^1.2.0",
-    "iron-ajax": "polymerelements/iron-ajax#^1.4.3",
-    "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
-    "paper-menu": "polymerelements/paper-menu#^1.2.2",
-    "paper-item": "polymerelements/paper-item#^1.2.1",
-    "paper-button": "polymerelements/paper-button#^1.0.14",
-    "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
-    "paper-material": "PolymerElements/paper-material#^1.0.6",
-    "paper-tabs": "PolymerElements/paper-tabs#^1.8.0",
-    "paper-input": "PolymerElements/paper-input#^1.1.23",
-    "iron-signals": "polymerelements/iron-signals#^1.0.3",
-    "iron-image": "polymerelements/iron-image#^1.2.5",
-    "iron-form": "polymerelements/iron-form#^1.1.4",
-    "gold-email-input": "polymerelements/gold-email-input#^1.0.9",
-    "paper-dialog": "polymerelements/paper-dialog#^1.1.0",
-    "paper-dropdown-menu": "polymerelements/paper-dropdown-menu#^1.5.0",
-    "paper-progress": "polymerelements/paper-progress#^1.0.11",
-    "paper-fab": "polymerelements/paper-fab#^1.2.1",
-    "paper-card": "polymerelements/paper-card#^1.1.4",
+    "polymer": "Polymer/polymer#^2.0.0",
+    "app-layout": "PolymerElements/app-layout#^2.0.0",
+    "app-route": "PolymerElements/app-route#^2.0.0",
+    "app-active-route": "^1.0.3",
+    "iron-collapse": "PolymerElements/iron-collapse#^2.0.0",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.0",
+    "iron-icon": "PolymerElements/iron-icon#^2.0.0",
+    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#^2.0.0",
+    "iron-localstorage": "PolymerElements/iron-localstorage#^2.0.0",
+    "iron-media-query": "polymerelements/iron-media-query#^2.0.0",
+    "iron-pages": "PolymerElements/iron-pages#^2.0.0",
+    "iron-selector": "PolymerElements/iron-selector#^2.0.0",
+    "iron-icons": "polymerelements/iron-icons#^2.0.0",
+    "iron-ajax": "polymerelements/iron-ajax#^2.0.0",
+    "iron-image": "polymerelements/iron-image#^2.0.0",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
+    "paper-item": "polymerelements/paper-item#^2.0.0",
+    "paper-button": "polymerelements/paper-button#^2.0.0",
+    "paper-listbox": "PolymerElements/paper-listbox#^2.0.0",
+    "paper-material": "PolymerElements/paper-material#^2.0.0",
+    "paper-tabs": "PolymerElements/paper-tabs#^2.0.0",
+    "paper-input": "PolymerElements/paper-input#^2.0.0",
+    "paper-dialog": "polymerelements/paper-dialog#^2.0.0",
+    "paper-dropdown-menu": "polymerelements/paper-dropdown-menu#^2.0.0",
+    "paper-progress": "polymerelements/paper-progress#^2.0.0",
+    "paper-fab": "polymerelements/paper-fab#^2.0.0",
+    "paper-card": "polymerelements/paper-card#^2.0.0",
+    "paper-toast": "polymerelements/paper-toast#^2.0.0",
     "flag-icon-css": "^2.8.0",
-    "paper-toast": "polymerelements/paper-toast#^1.3.0",
-    "app-active-route": "^1.0.3"
-  },
-  "devDependencies": {
-    "web-component-tester": "^4.0.0"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.1",
+    "web-animations-js": "web-animations/web-animations-js#^2.2.5"
   },
   "private": true
 }
