--- a/package.json
+++ b/package.json
@@ -1,40 +1,19 @@
 {
-  "name": "polymer-starter-kit-custom-build",
+  "name": "gitcheese",
   "version": "0.0.0",
-  "description": "A starting point for Polymer 1.0 custom build apps",
-  "license": "BSD-3-Clause",
+  "description": "gitcheese",
   "scripts": {
     "lint": "eslint . --ext js,html --ignore-path .gitignore",
-    "build": "gulp build",
+    "build": "polymer build",
     "package-template": "aws cloudformation package --template-file cloudformation/stack-template.json --output-template-file cloudformation/stack-template-packaged.yaml --s3-bucket gitcheese-artifacts --profile gitcheese",
     "deploy-dev": "aws cloudformation deploy --template-file cloudformation/stack-template-packaged.yaml --profile gitcheese --stack-name githceese-ui-dev --region us-east-1 --capabilities CAPABILITY_IAM --parameter-overrides ProjectName=gitcheese ServiceName=ui BranchName=dev",
     "deploy-master": "aws cloudformation deploy --template-file cloudformation/stack-template-packaged.yaml --profile gitcheese --stack-name githceese-ui-master --region us-east-1 --capabilities CAPABILITY_IAM --parameter-overrides ProjectName=gitcheese ServiceName=ui BranchName=master"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.22.0",
     "bower": "^1.8.0",
-    "css-slam": "^1.2.1",
-    "del": "^2.2.0",
-    "eslint": "^3.12.0",
-    "eslint-config-google": "^0.7.0",
-    "eslint-config-standard": "^7.0.0",
-    "eslint-plugin-html": "^1.7.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^2.1.1",
-    "gulp": "gulpjs/gulp#4.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-html-autoprefixer": "0.0.1",
-    "gulp-html-minifier": "^0.1.8",
-    "gulp-if": "^2.0.0",
-    "gulp-imagemin": "^3.1.0",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-uglify": "^2.0.1",
-    "merge-stream": "^1.0.0",
-    "polymer-build": "^1.2.4"
+    "polymer-cli": "^1.1.0"
   },
   "engines": {
     "node": ">=4.0"
-  },
-  "private": true
+  }
 }
